--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body mpa-version="9.0.21" mpa-extension-id="ibefaeehajgcpooopoegkifhgecigeeg"> 
 <audio id="myaudio">
   <source src="download.mp3" type="audio/mpeg">
-</audio loop >
-<button onclick="document.getElementById('myaudio').play()">❤️ Play</button>
-<button onclick="document.getElementById('myaudio').pause()">⏸ Pause</button>
+</audio loop>
+<button onclick="document.getElementById('myaudio').play()"style="transform: scale(2.0); transform-origin: top left;">❤️ Play</button> 
+<button id="pauseBtn"onclick="document.getElementById('myaudio').pause()"style="transform: scale(2.0); transform-origin: top left;">⏸ Pause</button>
 </div>
   <div id="ui"> 
    <div class="love"> 
@@ -643,5 +643,6 @@
     </div> 
    </div> 
   </div> 
+ <h1 id="Fann"> <3  </h1>
 </body>
 </html>
